--- a/ProbneKolokwium2/ProbneKolokwium2/Properties/launchSettings.json
+++ b/ProbneKolokwium2/ProbneKolokwium2/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/clients",
+      "launchUrl": "api/orders",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,7 +20,7 @@
     "ProbneKolokwium2": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "api/clients",
+      "launchUrl": "api/orders",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
